@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.17929
+//     Runtime Version:4.0.30319.18052
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -61,6 +61,24 @@ namespace Fb2ePubGui.Properties {
         }
         
         /// <summary>
+        ///   Looks up a localized string similar to Default settings file not found.
+        /// </summary>
+        internal static string AboutBox_AboutBox_Default_settings_file_not_found {
+            get {
+                return ResourceManager.GetString("AboutBox_AboutBox_Default_settings_file_not_found", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Default settings file: {0},  ({1}).
+        /// </summary>
+        internal static string Default_Settings_File {
+            get {
+                return ResourceManager.GetString("Default_Settings_File", resourceCulture);
+            }
+        }
+        
+        /// <summary>
         ///   Looks up a localized resource of type System.Drawing.Bitmap.
         /// </summary>
         internal static System.Drawing.Bitmap epub_logo_color_book {
@@ -76,6 +94,15 @@ namespace Fb2ePubGui.Properties {
         internal static string FormGUI_buttonConvert_Click_Please_select_FB2_files_to_convert {
             get {
                 return ResourceManager.GetString("FormGUI_buttonConvert_Click_Please_select_FB2_files_to_convert", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to LOG folder: {0}.
+        /// </summary>
+        internal static string Log_Folder {
+            get {
+                return ResourceManager.GetString("Log_Folder", resourceCulture);
             }
         }
         
